--- a/translations/locales/fr/placeholder.json
+++ b/translations/locales/fr/placeholder.json
@@ -1,8 +1,8 @@
 {
   "searchEmpty": "Recherchez le buildldldldldld de vos rêves",
   "searchNotFound": "Aucun buildld trouvé correspondant à ces stats",
-  "savedEmpty": "Retrouvez vos sets favoris ici",
+  "savedEmpty": "Retrouvez vos builds favoris ici",
   "noSetFound": "Aucun build trouvé...",
-  "yourFavoriteSetsWillAppearHere": "Vos sets favoris apparaîtrons ici",
+  "yourFavoriteSetsWillAppearHere": "Vos builds favoris apparaîtrons ici",
   "none": "Aucun"
 }
