--- a/translations/locales/en/helpSave.json
+++ b/translations/locales/en/helpSave.json
@@ -1,8 +1,8 @@
 {
   "intro.centralize": "Centralize and organize ",
-  "intro.description": "all your favorite sets for quick access.",
+  "intro.description": "all your favorite builds for quick access.",
 
-  "how_to_use_favorites.title": "How to manage your favorite sets",
+  "how_to_use_favorites.title": "How to manage your favorite builds",
   "how_to_use_favorites.step.save_set": "Save a new build",
   "how_to_use_favorites.step.save_set.label_description": "After finding a build you like, save it here to access it easily later",
   "how_to_use_favorites.step.choose_stats": "Edit displayed stats",
@@ -11,7 +11,7 @@
   "advanced_options.title": "Advanced options",
   "advanced_options.step.import_set": "Import a new build",
   "advanced_options.step.import_set.label_description": "Import a build copied to your clipboard",
-  "advanced_options.step.sort_sets": "Sort sets",
+  "advanced_options.step.sort_sets": "Sort builds",
   "advanced_options.step.sort_sets.label_open_sorts": "Open the available sorting options",
   "advanced_options.step.sort_sets.label_select_sort": "Select the sorting method that suits you",
   "advanced_options.step.sort_sets.label_long_press_hint": "Long press a sorting button to display its name",
