--- a/translations/locales/en/placeholder.json
+++ b/translations/locales/en/placeholder.json
@@ -1,8 +1,8 @@
 {
   "searchEmpty": "Search your dream build",
   "searchNotFound": "No build found with theses stats",
-  "savedEmpty": "Find here your favorite sets",
+  "savedEmpty": "Find here your favorite builds",
   "NoSetFound...": "No build found...",
-  "yourFavoriteSetsWillAppearHere": "Your favorite sets will appear here",
+  "yourFavoriteSetsWillAppearHere": "Your favorite builds will appear here",
   "none": "None"
 }
