--- a/translations/locales/en/button.json
+++ b/translations/locales/en/button.json
@@ -6,7 +6,7 @@
   "sendFeedback": "Send feedback",
   "openSourceLicenses": "Open Source Licenses",
   "resetSettings": "Reset settings",
-  "deleteAllSetsInMemory": "Delete all saved builds",
+  "deleteAllBuildsInMemory": "Delete all saved builds",
   "confirm": "Confirm",
   "cancel": "Cancel",
   "close": "Close",
