change "set" into "build" part4

--- a/translations/locales/en/modal.json
+++ b/translations/locales/en/modal.json
@@ -1,6 +1,6 @@
 {
   "filters": "Filters",
-  "selectASet": "Select a build",
+  "selectABuild": "Select a build",
 
   "desiredStatsAndStatsInSets": "Desired stats and displayed stats in builds",
   "displayedStatsInSets": "Displayed stats in builds",
