--- a/translations/locales/fr/modal.json
+++ b/translations/locales/fr/modal.json
@@ -1,6 +1,6 @@
 {
   "filters": "Filtres",
-  "selectASet": "Selectionner un buildldld",
+  "selectABuild": "Selectionner un buildldld",
 
   "desiredStatsAndStatsInSets": "Stats desirées et stats affichées dans les builds",
   "displayedStatsInSets": "Stats affichées dans les builds",
