--- a/translations/locales/fr/modal.json
+++ b/translations/locales/fr/modal.json
@@ -2,8 +2,8 @@
   "filters": "Filtres",
   "selectABuild": "Selectionner un buildldld",
 
-  "desiredStatsAndStatsInSets": "Stats desirées et stats affichées dans les builds",
-  "displayedStatsInSets": "Stats affichées dans les builds",
+  "desiredStatsAndStatsInBuilds": "Stats desirées et stats affichées dans les builds",
+  "displayedStatsInBuilds": "Stats affichées dans les builds",
   "displayedStats": "Stats affichées",
 
   "loadASavedSet": "Charger un buildld enregistré",
