--- a/translations/locales/fr/placeholder.json
+++ b/translations/locales/fr/placeholder.json
@@ -1,5 +1,5 @@
 {
-  "searchEmpty": "Recherchez le buildldldldldld de vos rêves",
+  "searchEmpty": "Recherchez le build de vos rêves",
   "searchNotFound": "Aucun buildld trouvé correspondant à ces stats",
   "savedEmpty": "Retrouvez vos builds favoris ici",
   "noSetFound": "Aucun build trouvé...",
