--- a/translations/locales/en/button.json
+++ b/translations/locales/en/button.json
@@ -16,8 +16,8 @@
   "remove": "Remove",
   "save": "Save",
   "loadTheStats": "Load the stats",
-  "loadTheSet": "Load the build",
+  "loadTheBuild": "Load the build",
   "loadTheStatsToSearchScreen": "Load the stats to search screen",
-  "loadTheSetToDisplayScreen": "Load the build to compare screen",
+  "loadTheBuildToDisplayScreen": "Load the build to compare screen",
   "copy": "Copy"
 }
