--- a/translations/locales/en/toast.json
+++ b/translations/locales/en/toast.json
@@ -5,10 +5,10 @@
   "importError": "import error",
   "clipboardIsEmpty": "clipboard is empty",
   "incorrectFormat": "incorrect format",
-  "thisSetDoesNotExist": "this build does not exist",
+  "thisBuildDoesNotExist": "this build does not exist",
   "unknownError": "unknown error",
 
-  "setLimitReached": "build limit reached",
+  "buildLimitReached": "build limit reached",
 
   "theSettingsHaveBeenReset": "the settings have been reset",
   "allSavedBuildsHaveBeenDeleted": "all saved builds have been deleted",
@@ -23,6 +23,6 @@
   "setCopiedInClipboard": "build copied in clipboard",
   "buildImported": "build imported",
   "statsImported": "build's stats imported",
-  "setLimitReachedInThisScreen": "build limit reached",
+  "buildLimitReachedInThisScreen": "build limit reached",
   "cannotGenerateUniqueName": "cannot generate new name"
 }
