--- a/translations/locales/fr/button.json
+++ b/translations/locales/fr/button.json
@@ -16,8 +16,8 @@
   "remove": "Supprimer",
   "save": "Enregistrer",
   "loadTheStats": "Charger les stats",
-  "loadTheSet": "Charger le build",
+  "loadTheBuild": "Charger le build",
   "loadTheStatsToSearchScreen": "Charger les stats dans l'écran de recherche",
-  "loadTheSetToDisplayScreen": "Charger le build dans l'écran de comparaison",
+  "loadTheBuildToDisplayScreen": "Charger le build dans l'écran de comparaison",
   "copy": "Copier"
 }
