--- a/translations/locales/fr/toast.json
+++ b/translations/locales/fr/toast.json
@@ -5,10 +5,10 @@
   "importError": "erreur d'importation",
   "clipboardIsEmpty": "presse-papiers vide",
   "incorrectFormat": "format incorrect",
-  "thisSetDoesNotExist": "ce build n'existe pas",
+  "thisBuildDoesNotExist": "ce build n'existe pas",
   "unknownError": "erreur inconnue",
 
-  "setLimitReached": "limite de buildsds atteinte",
+  "buildLimitReached": "limite de buildsds atteinte",
 
   "theSettingsHaveBeenReset": "les préférences ont été réinitialisées",
   "allSavedBuildsHaveBeenDeleted": "tous les builds sauvegardés ont été supprimés !",
@@ -23,6 +23,6 @@
   "setCopiedInClipboard": "build copié dans le presse-papier",
   "buildImported": "build importé",
   "statsImported": "stats du build importées",
-  "setLimitReachedInThisScreen": "limite de builds atteinte",
+  "buildLimitReachedInThisScreen": "limite de builds atteinte",
   "cannotGenerateUniqueName": "impossible de générer un nouveau nom"
 }
