--- a/translations/locales/fr/helpSave.json
+++ b/translations/locales/fr/helpSave.json
@@ -3,8 +3,8 @@
   "intro.description": "tous vos builds préférés pour y accéder rapidement.",
 
   "how_to_use_favorites.title": "Comment gérer vos builds favoris",
-  "how_to_use_favorites.step.save_set": "Enregistrer un nouveau buildld",
-  "how_to_use_favorites.step.save_set.label_description": "Après avoir trouvé un buildld qui vous convient, enregistrez-le pour le retrouver ici",
+  "how_to_use_favorites.step.save_set": "Enregistrer un nouveau build",
+  "how_to_use_favorites.step.save_set.label_description": "Après avoir trouvé un build qui vous convient, enregistrez-le pour le retrouver ici",
   "how_to_use_favorites.step.choose_stats": "Modifier les stats à afficher",
   "how_to_use_favorites.step.choose_stats.label_description": "Choisissez les statistiques à afficher",
 
