--- a/translations/locales/fr/helpSearch.json
+++ b/translations/locales/fr/helpSearch.json
@@ -27,14 +27,14 @@
   "advanced_options.step.filters": "Filtres (option)",
   "advanced_options.step.filters.lock_item": "Imposez un personnage, un kart, des roues ou une aile",
 
-  "advanced_options.step.reuse_stats": "Réutilisez les statistiques d’un buildldld",
+  "advanced_options.step.reuse_stats": "Réutilisez les statistiques d’un buildld",
   "advanced_options.step.reuse_stats.open_favorites": "Ouvrez votre collection de buildsds favoris",
-  "advanced_options.step.reuse_stats.import_variations": "Importez les statistiques d’un buildldld pour chercher des variantes",
+  "advanced_options.step.reuse_stats.import_variations": "Importez les statistiques d’un buildld pour chercher des variantes",
 
   "results_management.title": "Gestion des résultats",
   "results_management.save_to_favorites": "Ajoutez aux favoris",
   "results_management.move_to_comparator": "Déplacez vers le comparateur de builds",
-  "results_management.export_set": "Exportez le buildld",
+  "results_management.export_set": "Exportez le build",
 
   "tips.title": "Conseil pratique",
   "tips.start_with_key_stats": "Commencez avec 2–3 statistiques principales pour des résultats plus pertinents"
