--- a/translations/locales/fr/modal.json
+++ b/translations/locales/fr/modal.json
@@ -1,12 +1,12 @@
 {
   "filters": "Filtres",
-  "selectABuild": "Selectionner un buildldld",
+  "selectABuild": "Selectionner un buildld",
 
   "desiredStatsAndStatsInBuilds": "Stats desirées et stats affichées dans les builds",
   "displayedStatsInBuilds": "Stats affichées dans les builds",
   "displayedStats": "Stats affichées",
 
-  "loadASavedSet": "Charger un buildld enregistré",
+  "loadASavedSet": "Charger un build enregistré",
 
   "guideBuildFinder": "Guide du Chercheur de builds",
   "guideBuildComparator": "Guide du Comparateur de builds",
