--- a/translations/locales/fr/placeholder.json
+++ b/translations/locales/fr/placeholder.json
@@ -1,6 +1,6 @@
 {
   "searchEmpty": "Recherchez le build de vos rêves",
-  "searchNotFound": "Aucun buildld trouvé correspondant à ces stats",
+  "searchNotFound": "Aucun build trouvé correspondant à ces stats",
   "savedEmpty": "Retrouvez vos builds favoris ici",
   "noSetFound": "Aucun build trouvé...",
   "yourFavoriteBuildsWillAppearHere": "Vos builds favoris apparaîtrons ici",
