--- a/translations/locales/fr/toast.json
+++ b/translations/locales/fr/toast.json
@@ -24,5 +24,7 @@
   "buildImported": "build importé",
   "statsImported": "stats du build importées",
   "buildLimitReachedInThisScreen": "limite de builds atteinte",
-  "cannotGenerateUniqueName": "impossible de générer un nouveau nom"
+  "cannotGenerateUniqueName": "impossible de générer un nouveau nom",
+  "buildNameRequiredForSaving": "you devez entrer un nom pour liker un build",
+  "savedBuildCannotHaveEmptyName": "les builds likés doivent avoir un nom"
 }
