--- a/translations/locales/fr/modal.json
+++ b/translations/locales/fr/modal.json
@@ -4,7 +4,7 @@
 
   "desiredStatsAndStatsInBuilds": "Stats desirées et stats affichées dans les builds",
   "displayedStatsInBuilds": "Stats affichées dans les builds",
-  "displayedStats": "Stats affichées",
+  "statsToCompare": "Stats à comparer",
 
   "loadASavedSet": "Charger un build enregistré",
 
