correct some sort translations

--- a/translations/locales/en/tooltip.json
+++ b/translations/locales/en/tooltip.json
@@ -64,7 +64,5 @@
   "speed": "Speed",
   "handling": "Handling",
   "id": "Number",
-  "name": "Name",
-  "asc": "ascending",
-  "desc": "descending"
+  "name": "Name"
 }
