--- a/translations/locales/en/sort.json
+++ b/translations/locales/en/sort.json
@@ -2,5 +2,21 @@
   "id": "Number",
   "name": "Name",
   "asc": "ascending",
-  "desc": "descending"
+  "desc": "descending",
+
+  "speedGround": "Ground speed (GS)",
+  "speedAntiGravity": "Anti-gravity speed (AGS)",
+  "speedWater": "Water speed (WS)",
+  "speedAir": "Air speed (AS)",
+  "acceleration": "Acceleration (Acc)",
+  "weight": "Weight (Wei)",
+  "handlingGround": "Ground handling (GH)",
+  "handlingAntiGravity": "Anti-gravity handling (AGH)",
+  "handlingWater": "Water handling (WH)",
+  "handlingAir": "Air handling (AH)",
+  "traction": "Traction (Tra)",
+  "miniTurbo": "Mini-Turbo (MT)",
+
+  "speed": "Speed",
+  "handling": "Handling"
 }
