--- a/translations/locales/fr/button.json
+++ b/translations/locales/fr/button.json
@@ -17,7 +17,7 @@
   "save": "Enregistrer",
   "loadTheStats": "Charger les stats",
   "loadTheBuild": "Charger le build",
-  "loadTheStatsToSearchScreen": "Charger les stats dans l'écran de recherche",
-  "loadTheBuildToDisplayScreen": "Charger le build dans l'écran de comparaison",
+  "loadTheStatsToSearchScreen": "Charger les stats dans le Chercheur",
+  "loadTheBuildToDisplayScreen": "Charger le build dans le Comparateur",
   "copy": "Copier"
 }
