improve matchDesiredStats text

--- a/translations/locales/en/text.json
+++ b/translations/locales/en/text.json
@@ -8,7 +8,8 @@
 
   "selected": "Selected",
 
-  "matchDesiredStats": "Match desired stats",
+  "matchDesiredStats": "Synchronization: the desired stats are displayed in the found builds",
+  "unmatchDesiredStats": "Dissociation: the stats displayed in the builds are independent",
   "chosenStats": "desir.",
   "resultStats": "disp.",
 
