must enter a name before sharing (tooltip, toast, optimization)

--- a/translations/locales/en/button.json
+++ b/translations/locales/en/button.json
@@ -19,5 +19,5 @@
   "loadTheBuild": "Load the build",
   "loadTheStatsToSearchScreen": "Load the stats to the Finder",
   "loadTheBuildToDisplayScreen": "Load the build to the Comparator",
-  "copy": "Copy"
+  "share": "Share"
 }
