--- a/translations/locales/en/tooltip.json
+++ b/translations/locales/en/tooltip.json
@@ -42,7 +42,7 @@
   "loadTheBuild": "Load the build",
   "loadTheStatsToSearchScreen": "Load the stats to the Finder",
   "loadTheBuildToDisplayScreen": "Load the build to the Comparator",
-  "copy": "Copy",
+  "share": "Share",
   "moreActions": "More actions",
 
   "confirm": "Confirm",
