--- a/translations/locales/fr/button.json
+++ b/translations/locales/fr/button.json
@@ -19,5 +19,5 @@
   "loadTheBuild": "Charger le build",
   "loadTheStatsToSearchScreen": "Charger les stats dans le Chercheur",
   "loadTheBuildToDisplayScreen": "Charger le build dans le Comparateur",
-  "copy": "Copier"
+  "share": "Partager"
 }
