add a tuto for build importation

--- a/translations/locales/en/text.json
+++ b/translations/locales/en/text.json
@@ -19,5 +19,7 @@
 
   "buildFound": "Build found",
 
-  "warning": "Warning"
+  "warning": "Warning",
+
+  "tutoImportation": "Copy the text, go to 'Collection', and click the 'Import' (clipboard) button."
 }
